--- a/my-project-app/src/app/user/profile/profile.component.html
+++ b/my-project-app/src/app/user/profile/profile.component.html
@@ -1,7 +1,7 @@
 <!-- homepage -->
 <div class="container">
   <div class="profile">
-    <img src="./profile.png" alt="default user" />
+    <img src="https://static.vecteezy.com/system/resources/thumbnails/005/544/718/small_2x/profile-icon-design-free-vector.jpg" alt="default user" />
     <h3>User Info:</h3>
 
     <!-- READONLY MODE -->
