--- a/my-project-app/src/app/error/error.component.css
+++ b/my-project-app/src/app/error/error.component.css
@@ -1,8 +1,9 @@
 .mainbox {
     margin: auto;
-    height: 550px;
-    width: 550px;
+    height: 100%;
+    width: 100%;
     position: relative;
+    background: white;
   }
   
   .err {
@@ -10,14 +11,14 @@
     font-family: "Nunito Sans", sans-serif;
     font-size: 11rem;
     position: absolute;
-    left: 20%;
+    left: 40%;
     top: 8%;
   }
   
   .far {
     position: absolute;
     font-size: 8.5rem;
-    left: 42%;
+    left: 52%;
     top: 15%;
     color: rgb(108, 164, 164);
   }
@@ -27,7 +28,7 @@
     font-family: "Nunito Sans", sans-serif;
     font-size: 11rem;
     position: absolute;
-    left: 68%;
+    left:64%;
     top: 8%;
   }
   
@@ -36,8 +37,8 @@
     font-family: "Nunito Sans", sans-serif;
     font-size: 1.6rem;
     position: absolute;
-    left: 16%;
-    top: 45%;
+    left: 18%;
+    top: 55%;
     width: 75%;
   }
   
