--- a/my-project-app/src/app/single-tattoo/current-tattoo/current-tattoo.component.css
+++ b/my-project-app/src/app/single-tattoo/current-tattoo/current-tattoo.component.css
@@ -74,8 +74,9 @@
     text-align: center;
     flex-basis: 25%;
   }
-  
-  .subscribers button {
+
+
+  /* .subscribers button {
     padding: 20px;
     border: none;
     border-radius: 50px;
@@ -83,7 +84,34 @@
     cursor: pointer;
     width: 20%;
     margin: 20px;
+  } */
+
+  .delete {
+    padding: 10px;
+    border: none;
+    border-radius: 20px;
+    color: #234465;
+    width: 9%;
+    margin: 10px;
+    display: flex;
+    justify-self: right;
+    cursor: pointer;
+    font-size: 9px;
   }
+
+    
+  .bts-container button {
+    padding: 20px;
+    border: none;
+    border-radius: 50px;
+    color: #234465;
+    cursor: pointer;
+    width: 20%;
+    margin: 20px;
+  
+  }
+
+  
   .no-comment {
     text-align: right;
     display: flex;
@@ -101,20 +129,13 @@
   }
 
   .input-container {
-    height: 300px;
+    height: 200px;
 }
-
 input#comment {
-    height: 290px;
-    width: 100%;
-}
-  .subscribe {
-    background-color: green;
-  }
-  
-  .unsubscribe {
-    background-color: red;
-  }
+    height: 200px;
+    width: 100%; 
+} 
+
   
   .tattoo-name-wrapper .subscribers p {
     text-align: right;
@@ -133,14 +154,36 @@ input#comment {
     background-color: transparent;
     text-decoration: none;
     padding: 1rem;
-    
+    cursor: pointer;
     vertical-align: middle;
     text-align: center;
     font-size: 20px;
     border-radius: 3rem;
-    color: darkgray;
+    color: #234465;
     transition: all ease 0.4s;
+    width: 20%;
+     
+  }
+
+  .delete i {
     width: 50%;
+    font-size: 20px;
+  }
+
+  .error {
+    color: red;
+  }
+  .buttons {
+    display: flex;
+    justify-content: right;
+  }
+  .buttons button {
+    padding: 10px;
+    border-radius: 20px;
+    color: #234465;
+    margin: 10px;
+    cursor: pointer;
+    width: 10%;
   }
   
   /* comment */
@@ -149,7 +192,7 @@ input#comment {
     margin-top: 1em;
     border: 1px solid #999;
     border-radius: 0.5em;
-    width: 50%;
+    width: 100%;
     padding: 10px;
     background-color: #ffffff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -290,5 +333,5 @@ input#comment {
   
   .delete {
     color: red;
-    background-color: black;
+    color: #234465;
   }
