--- a/my-project-app/src/app/user/profile/profile.component.css
+++ b/my-project-app/src/app/user/profile/profile.component.css
@@ -113,7 +113,11 @@
     padding: 0.5em 1.5em;
   }
   
-  .error {
-    color: red;
+  p.error {
+    text-align: left;
+    border-radius: 0.5em;
+    color: red !important;
+    padding-top: 0;
+    font-weight: bold;
   }
   
